<resources>
    <string name="app_name">A.Blancae</string>
    <string name="title_home">Montañerito Paisa</string>
    <string name="scientific_name">(Atlapetes Blancae)</string>
    <string name="start_capture">Empezar a grabar</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="you_think_you_saw">¿Crees que viste un</string>
    <string name="but_not_sure">pero no estás seguro?</string>
    <string name="humboldt">Humboldt</string>
    <string name="sistemic">Sistemic</string>
    <string name="neotropical_innovation">Neotropical Innovation</string>
    <string name="finding_your">Encontrando tu</string>
    <string name="blancae_side">Blancae de lado</string>
    <string name="not_found_prefix">No es un</string>
    <string name="found_prefix">Encontraste un</string>
    <string name="percentage_suffix">%1$s %%</string>
    <string name="loading">...</string>
    <string name="send_video">Envía tu vídeo</string>
    <string name="email_subject">Video de Montañerito Paisa</string>
    <string name="email_body">Este es mi video del Montañerito Paisa</string>
    <string name="config">Configuración</string>
    <string name="fps">Cuadros por segundo</string>
    <string name="default_fps">1</string>
    <string name="decrease">Disminuir</string>
    <string name="increase">Aumentar</string>
    <string name="estimate_processing_time">Tiempo estimado de análisis:</string>
    <string name="seconds">segundos</string>
</resources>